@@ -1,14 +1,44 @@
-ROOT_PATH="$1"
-JAR_NAME="$2"
-JVM_OPTIONS="$3"
-PORT="$4"
-JMX_PORT="$5"
+#!/bin/bash
+# 颜色输出
+if [[ -t 1 ]]; then
+  RED='\033[0;31m'
+  GREEN='\033[0;32m'
+  YELLOW='\033[1;33m'
+  NC='\033[0m'
+else
+  RED=''
+  GREEN=''
+  YELLOW=''
+  NC=''
+fi
+LOCAL_TIME=$(date +"%Y-%m-%d %H:%M:%S")
+# 获取当前脚本所在目录
+SCRIPT_DIR=$(cd "$(dirname "${BASH_SOURCE[0]}")" &>/dev/null && pwd)
+cd $SCRIPT_DIR
 
-cd "$ROOT_PATH"
-if [ -f "$JAR_NAME.latest" ]; then
-  rm -f "$JAR_NAME"
-  mv "$JAR_NAME.latest" "$JAR_NAME"
+PORT=6885
+DNS_PORT=753
+MEM_OPTIONS="-Xms512m -Xmx896m -Xss512k -XX:MaxMetaspaceSize=128m -XX:MaxDirectMemorySize=1g -XX:-OmitStackTraceInFastThrow"
+APP_OPTIONS="-Dapp.net.reactorThreadAmount=10 -Dapp.net.connectTimeoutMillis=20000 -Djava.net.preferIPv4Stack=true"
+DUMP_OPTS="-Xlog:gc*,gc+age=trace,safepoint:file=./gc.log:time,uptime:filecount=10,filesize=10M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$SCRIPT_DIR/heapdump-$(date +%Y%m%d_%H%M%S).hprof -XX:ErrorFile=$SCRIPT_DIR/hs_err_pid%p.log -XX:+CreateCoredumpOnCrash --add-exports java.base/jdk.internal.ref=ALL-UNNAMED"
+
+echo "${RED}[${LOCAL_TIME}] 发布模式：正在终止端口 ${PORT}/tcp 的旧进程..."
+sudo fuser -k ${PORT}/tcp >/dev/null 2>&1 || true
+sleep 2  # 等待进程完全退出和端口释放
+
+if [ -f "app.jar.latest" ]; then
+  rm -f "app.jar"
+  mv "app.jar.latest" "app.jar"
 fi
 
-netstat -nlp|grep :${PORT}|grep -v grep|awk '{print $7}'|awk -F '/' '{print $1}'|xargs kill -9
-java -javaagent:./jmx_prometheus_javaagent.jar=$JMX_PORT:./jmx_prometheus_config.yaml $JVM_OPTIONS -Dspring.profiles.active=prd -Dfile.encoding=UTF-8 -jar $JAR_NAME &
+echo "${YELLOW}[${LOCAL_TIME}] 正在启动 ${PORT}/tcp 的进程..."
+java ${MEM_OPTIONS} ${APP_OPTIONS} ${DUMP_OPTS} -Dfile.encoding=UTF-8 -jar app.jar -port=${PORT} -shadowDnsPort=$DNS_PORT &
+sleep 2
+
+if fuser ${PORT}/tcp >/dev/null 2>&1; then
+    PID=$(fuser ${PORT}/tcp 2>/dev/null | awk '{print $1}' | head -1)
+    echo "${GREEN}[${LOCAL_TIME}] 启动成功！PID: ${PID}"
+else
+    echo "${RED}[${LOCAL_TIME}] 启动失败！请手动执行查看错误"
+    exit 1
+fi
